gme.zig


	/// Number of milliseconds (1000 = one second) played since beginning of track.
	pub fn tell(self: *const Self) u32 {
		return @intCast(gme_tell(self));
	}
	extern fn gme_tell(*const Self) c_int;

	/// Number of samples generated since beginning of track.
	pub fn tellSamples(self: *const Self) u32 {
		return @intCast(gme_tell_samples(self));
	}
	extern fn gme_tell_samples(*const Self) c_int;

	/// Seek to new time in track. Seeking backwards or far forward can take a while.
	pub fn seek(self: *Self, msec: u32) Error!void {
		const err = gme_seek(self, @intCast(msec));
		if (err != 0)
			return toError(err);
	}
	extern fn gme_seek(*Self, c_int) Result;

	/// Equivalent to restarting track then skipping n samples
	pub fn seekSamples(self: *Self, samples: u32) Error!void {
		const err = gme_seek_samples(self, @intCast(samples));
		if (err != 0)
			return toError(err);
	}
	extern fn gme_seek_samples(*Self, c_int) Result;

	/// Most recent warning string, or null if none.
	/// Clears current warning after returning.
	/// Warning is also cleared when loading a file and starting a track.
	pub fn warning(self: *Self) ?[:0]const u8 {
		const warn = gme_warning(self);
		return if (warn) |s| s[0..strlen(s)] else null;
	}
	extern fn gme_warning(*Self) ?[*:0]const u8;

	/// Load m3u playlist file (must be done after loading music).
	pub fn loadM3u(self: *Self, path: [*:0]const u8) Error!void {
		const err = gme_load_m3u(self, path);
		if (err != 0)
			return toError(err);
	}
	extern fn gme_load_m3u(*Self, [*:0]const u8) Result;

	/// Gets information for a particular track (length, name, author, etc.).
	/// Must be freed after use.
	pub fn trackInfo(self: *const Self, track: u32) Error!*Info {
		var info: ?*Info = null;
		const err = gme_track_info(self, &info, @intCast(track));
		return if (err != 0) toError(err) else info.?;
	}
	extern fn gme_track_info(*const Self, *?*Info, c_int) Result;

	/// Disable automatic end-of-track detection and skipping of silence at beginning.
	pub fn ignoreSilence(self: *Self, ignore: bool) void {
		gme_ignore_silence(self, @intFromBool(ignore));
	}
	extern fn gme_ignore_silence(*Self, c_int) void;

	/// Number of voices used by currently loaded file.
	pub fn voiceCount(self: *const Self) u32 {
		return @intCast(gme_voice_count(self));
	}
	extern fn gme_voice_count(*const Self) c_int;

	/// Name of voice i, from 0 to `voiceCount()` - 1
	pub fn voiceName(self: *const Self, i: u32) [:0]const u8 {
		const s = gme_voice_name(self, @intCast(i));
		return s[0..strlen(s)];
	}
	extern fn gme_voice_name(*const Self, c_int) [*:0]const u8;

	pub fn muteVoice(self: *Self, index: u32, mute: bool) void {
		gme_mute_voice(self, @intCast(index), @intFromBool(mute));
	}
	extern fn gme_mute_voice(*Self, c_int, c_int) void;

	/// Mute/unmute voice i, where voice 0 is first voice.
	pub fn muteVoices(self: *Self, muting_mask: u32) void {
		gme_mute_voices(self, @intCast(muting_mask));
	}
	extern fn gme_mute_voices(*Self, c_uint) void;

	/// Disable/Enable echo effect for SPC files.
	pub fn disableEcho(self: *Self, disable: bool) void {
		gme_disable_echo(self, @intFromBool(disable));
	}
	extern fn gme_disable_echo(*Self, c_int) void;

	/// Enables/disables most accurate sound emulation options.
	pub fn enableAccuracy(self: *Self, enable: bool) void {
		gme_enable_accuracy(self, @intFromBool(enable));
	}
	extern fn gme_enable_accuracy(*Self, c_int) void;

	/// whether the pcm output retrieved by gme_play() will have all 8 voices
	/// rendered to their individual stereo channel or (if false) these voices
	/// get mixed into one single stereo channel.
	pub fn isMultiChannel(self: *const Self) bool {
		return (gme_multi_channel(self) != 0);
	}
	extern fn gme_multi_channel(*const Self) c_int;

	/// Load music file into emulator.
	pub fn loadFile(self: *Self, path: [*:0]const u8) Error!void {
		const err = gme_load_file(self, path);
		if (err != 0)
			return toError(err);
	}
	extern fn gme_load_file(*Self, [*:0]const u8) Result;

	/// Load music file from memory into emulator. Makes a copy of data passed.
	pub fn loadData(self: *Self, data: []const u8) Error!void {
		const err = gme_load_data(self, data.ptr, @intCast(data.len));
		if (err != 0)
			return toError(err);
	}
	extern fn gme_load_data(*Self, *const anyopaque, c_long) Result;

	/// Load multiple single-track music files from memory into emulator.
	pub fn loadTracks(self: *Self, data: [*]const u8, sizes: []usize) Error!void {
		const err = gme_load_tracks(self, data, @ptrCast(sizes.ptr), @intCast(sizes.len));
		if (err != 0)
			return toError(err);
	}
	extern fn gme_load_tracks(*Self, [*]const u8, [*]c_long, c_uint) Result;

	/// Load music file using custom data reader function that will be called to
	/// read file data. Most emulators load the entire file in one read call.
	pub fn loadCustom(self: *Self, func: Reader, data: []anyopaque) Error!void {
		const err = gme_load_custom(self, func, data.len, data.ptr);
		if (err != 0)
			return toError(err);
	}
	extern fn gme_load_custom(*Self, Reader, c_long, *anyopaque) Result;

	/// Load m3u playlist file from memory (must be done after loading music).
	pub fn loadM3uData(self: *Self, data: []const anyopaque) Error!void {
		const err = gme_load_m3u_data(self, data.ptr, data.len);
		if (err != 0)
			return toError(err);
	}
	extern fn gme_load_m3u_data(*Self, *const anyopaque, c_long) Result;
};
